test/files/neg/t1211c/test.scala

object Test extends App {
  val j = new J
  println {
    j.f(j.E.E1)
    j.f(J.E.E1)
  }
}
